# guarded-AI-agent

./: .gitignore  CLAUDE.md  README.md
.planning/: PROJECT.md  REQUIREMENTS.md
.planning/phases/01-core-loop-terminal-verified/: 01-01-SUMMARY.md  01-02-SUMMARY.md  01-03-SUMMARY.md  01-04-SUMMARY.md  01-05-SUMMARY.md
.planning/phases/02-persistence-approval-workflow/: 02-01-SUMMARY.md  02-02-SUMMARY.md  02-03-SUMMARY.md  02-04-SUMMARY.md
.planning/phases/03-dashboard-real-time-polish/: 03-02-SUMMARY.md  03-03-SUMMARY.md  03-04-SUMMARY.md  03-05-SUMMARY.md  03-06-SUMMARY.md  03-07-SUMMARY.md  03-VERIFICATION.md
backend/: .env.example  agent_loop.py  approval_manager.py  config.py  conftest.py  db.py  gateway.py  gemini_client.py  main.py  mcp_manager.py  models.py  policy_engine.py  policy_rules.yaml  pyproject.toml  schema_sanitizer.py  test_agent_loop.py  test_approval.py  test_audit.py  test_discovery.py  test_gateway.py  test_gateway_broadcast.py  test_main.py  test_policy_db.py  ws_manager.py
backend/tests/: test_policy_engine.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: DecisionBadge.tsx  Sidebar.tsx  StatusDot.tsx
frontend/src/pages/: AgentPage.tsx  ApprovalsPage.tsx  AuditLogsPage.tsx  PoliciesPage.tsx
frontend/src/ws/: WebSocketContext.tsx  useWebSocket.ts
mcp-servers/sandbox-file-manager/: pyproject.toml  server.py  test_client.py
mcp-servers/sandbox-file-manager/sandbox/: injected_instructions.txt  notes.txt  secrets.txt
